inserçao da fonte Poppins

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -18,6 +18,7 @@ body {
   -ms-font-feature-settings: "kern", "liga", "clig", "calt";
   -webkit-font-feature-settings: "kern", "liga", "clig", "calt";
   font-feature-settings: "kern", "liga", "clig", "calt";
+  font-family:"Poppins"
 }
 article,
 aside,
